--- a/style.css
+++ b/style.css
@@ -1,40 +1,83 @@
 body{
-    font-famil: Arial,sans-serif;
+   font-family: Arial,sans-serif;
     margin: 0;
     padding: 0;
+    background-color: rgb(5, 171, 227);
+    color: darkblue;
+    
 
 }
 
-header {
-    background-color: #4CAF50;
+header{
+    background-color: #07890c;
     color: white;
-    text-align: certer;
+    text-align: center;
     padding: 15px;
     border-bottom: 3px solid  #333;
+    position: relative; 
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+
+}
+h1 {
+    margin: 0;
+    flex: 1;
+
+
+}
+    
 
 
     
-}
+
 
 container {
+    /*display: flex;
+    justify-content: flex-end;*/
     margin: 20px;
     padding: 20px;
     border: 2px solid #ccc;
-    border-radius: 5px; 
+    border-radius: 5px;
+    position: absolute;
+    top: 10px; /* Position the buttons relative to the header */
+    right: 20px;        
+    display: flex; 
+    gap:10px;
+        
+    
+    
+    
 
+}
 }
 
 button{
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 14px;
     margin: 10px;
     border: none;
     border-radius: 5px; 
     cursor: pointer;
+    float: right;
+   
 
+    
+ 
 
 }
 button:hover {
-    background-color: #ddd;
+    background-color:#ddd;
 
 }
+
+#message {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: bold;
+
+    }
+
+
